@@ -1,6 +1,6 @@
 #!/bin/bash
 #
-# Copyright (c) 2015 The JobX Project
+# Copyright (c) 2015 The Apollo Project
 #
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements. See the NOTICE file
@@ -20,45 +20,314 @@
 # under the License.
 #
 # -----------------------------------------------------------------------------
-#Start Script for the JOBX agent
-# -----------------------------------------------------------------------------
+# Control Script for the APOLLO Server
 #
-# Better OS/400 detection: see Bugzilla 31132
+# Environment Variable Prerequisites
+#
+#   APP_HOME   May point at your apollo "build" directory.
+#
+#   APP_BASE   (Optional) Base directory for resolving dynamic portions
+#                   of a apollo installation.  If not present, resolves to
+#                   the same directory that APP_HOME points to.
+#
+#   APP_CONF    (Optional) config path
+#
+#   APP_PID    (Optional) Path of the file which should contains the pid
+#                   of the apollo startup java process, when start (fork) is
+#                   used
+# -----------------------------------------------------------------------------
+
+#echo color
+WHITE_COLOR="\E[1;37m";
+RED_COLOR="\E[1;31m";
+BLUE_COLOR='\E[1;34m';
+GREEN_COLOR="\E[1;32m";
+YELLOW_COLOR="\E[1;33m";
+RES="\E[0m";
+
+
+printf "${GREEN_COLOR}                                                                                  ${RES}\n"
+printf "${GREEN_COLOR}       █████╗ ██████╗  ██████╗ ██╗     ██╗      ██████╗                           ${RES}\n"
+printf "${GREEN_COLOR}      ██╔══██╗██╔══██╗██╔═══██╗██║     ██║     ██╔═══██╗                          ${RES}\n"
+printf "${GREEN_COLOR}      ███████║██████╔╝██║   ██║██║     ██║     ██║   ██║                          ${RES}\n"
+printf "${GREEN_COLOR}      ██╔══██║██╔═══╝ ██║   ██║██║     ██║     ██║   ██║                          ${RES}\n"
+printf "${GREEN_COLOR}      ██║  ██║██║     ╚██████╔╝███████╗███████╗╚██████╔╝                          ${RES}\n"
+printf "${GREEN_COLOR}      ╚═╝  ╚═╝╚═╝      ╚═════╝ ╚══════╝╚══════╝ ╚═════╝                           ${RES}\n"
+printf "${GREEN_COLOR}                                                                                  ${RES}\n\n"
+
+
+echo_r () {
+    # Color red: Error, Failed
+    [[ $# -ne 1 ]] && return 1
+    printf "[${BLUE_COLOR}apollo${RES}] ${RED_COLOR}$1${RES}\n"
+}
+
+echo_g () {
+    # Color green: Success
+    [[ $# -ne 1 ]] && return 1
+    printf "[${BLUE_COLOR}apollo${RES}] ${GREEN_COLOR}$1${RES}\n"
+}
+
+echo_y () {
+    # Color yellow: Warning
+    [[ $# -ne 1 ]] && return 1
+    printf "[${BLUE_COLOR}apollo${RES}] ${YELLOW_COLOR}$1${RES}\n"
+}
+
+echo_w () {
+    # Color yellow: White
+    [[ $# -ne 1 ]] && return 1
+    printf "[${BLUE_COLOR}apollo${RES}] ${WHITE_COLOR}$1${RES}\n"
+}
+
+
+# OS specific support.  $var _must_ be set to either true or false.
+cygwin=false
+darwin=false
 os400=false
+hpux=false
+# shellcheck disable=SC2006
 case "`uname`" in
+CYGWIN*) cygwin=true;;
+Darwin*) darwin=true;;
 OS400*) os400=true;;
+HP-UX*) hpux=true;;
 esac
 
 # resolve links - $0 may be a softlink
 PRG="$0"
 
-while [ -h "$PRG" ] ; do
+while [[ -h "$PRG" ]]; do
+  # shellcheck disable=SC2006
   ls=`ls -ld "$PRG"`
+  # shellcheck disable=SC2006
   link=`expr "$ls" : '.*-> \(.*\)$'`
   if expr "$link" : '/.*' > /dev/null; then
     PRG="$link"
   else
+    # shellcheck disable=SC2006
     PRG=`dirname "$PRG"`/"$link"
   fi
 done
 
+# Get standard environment variables
+# shellcheck disable=SC2006
 PRGDIR=`dirname "$PRG"`
-EXECUTABLE=jobx.sh
 
-# Check that target executable exists
+# shellcheck disable=SC2006
+APP_HOME=`cd "$PRGDIR/.." >/dev/null; pwd`
+APP_BASE="$APP_HOME"
+APP_CONF="$APP_BASE"/conf
+APP_BIN="$APP_BASE"/bin
+APP_LIB="$APP_BASE"/lib
+APP_OUT="$APP_BASE"/logs/apollo.out
+APP_TMPDIR="$APP_BASE"/temp
+
+# Ensure that any user defined CLASSPATH variables are not used on startup,
+# but allow them to be specified in setenv.sh, in rare case when it is needed.
+CLASSPATH=
+
+if [[ -r "$APP_BASE/bin/setenv.sh" ]]; then
+  . "$APP_BASE/bin/setenv.sh"
+elif [[ -r "$APP_HOME/bin/setenv.sh" ]]; then
+  . "$APP_HOME/bin/setenv.sh"
+fi
+
+# For Cygwin, ensure paths are in UNIX format before anything is touched
+if ${cygwin}; then
+  # shellcheck disable=SC2006
+  [[ -n "$JAVA_HOME" ]] && JAVA_HOME=`cygpath --unix "$JAVA_HOME"`
+  # shellcheck disable=SC2006
+  [[ -n "$JRE_HOME" ]] && JRE_HOME=`cygpath --unix "$JRE_HOME"`
+  # shellcheck disable=SC2006
+  [[ -n "$APP_HOME" ]] && APP_HOME=`cygpath --unix "$APP_HOME"`
+  # shellcheck disable=SC2006
+  [[ -n "$APP_BASE" ]] && APP_BASE=`cygpath --unix "$APP_BASE"`
+  # shellcheck disable=SC2006
+  [[ -n "$CLASSPATH" ]] && CLASSPATH=`cygpath --path --unix "$CLASSPATH"`
+fi
+
+# Ensure that neither APP_HOME nor APP_BASE contains a colon
+# as this is used as the separator in the classpath and Java provides no
+# mechanism for escaping if the same character appears in the path.
+case ${APP_HOME} in
+  *:*) echo "Using APP_HOME:   $APP_HOME";
+       echo "Unable to start as APP_HOME contains a colon (:) character";
+       exit 1;
+esac
+case ${APP_BASE} in
+  *:*) echo "Using APP_BASE:   $APP_BASE";
+       echo "Unable to start as APP_BASE contains a colon (:) character";
+       exit 1;
+esac
+
+# For OS400
 if ${os400}; then
-  # -x will Only work on the os400 if the files are:
+  # Set job priority to standard for interactive (interactive - 6) by using
+  # the interactive priority - 6, the helper threads that respond to requests
+  # will be running at the same priority as interactive jobs.
+  COMMAND='chgjob job('${JOBNAME}') runpty(6)'
+  system ${COMMAND}
+
+  # Enable multi threading
+  export QIBM_MULTI_THREADED=Y
+fi
+
+# Get standard Java environment variables
+if ${os400}; then
+  # -r will Only work on the os400 if the files are:
   # 1. owned by the user
   # 2. owned by the PRIMARY group of the user
   # this will not work if the user belongs in secondary groups
-  eval
+  . "$APP_HOME"/bin/setclasspath.sh
 else
-  if [[ ! -x "$PRGDIR"/"$EXECUTABLE" ]]; then
-    echo "Cannot find $PRGDIR/$EXECUTABLE"
-    echo "The file is absent or does not have execute permission"
+  if [[ -r "$APP_HOME"/bin/setclasspath.sh ]]; then
+    . "$APP_HOME"/bin/setclasspath.sh
+  else
+    echo "Cannot find $APP_HOME/bin/setclasspath.sh"
     echo "This file is needed to run this program"
     exit 1
   fi
 fi
 
-exec "$PRGDIR"/"$EXECUTABLE" start "$@"
+#check java exists.
+$RUNJAVA >/dev/null 2>&1
+
+if [[ $? -ne 1 ]];then
+  echo_r "ERROR: java is not install,please install java first!"
+  exit 1;
+fi
+
+#check openjdk
+# shellcheck disable=SC2006
+if [[ "`${RUNJAVA} -version 2>&1 | head -1|grep "openjdk"|wc -l`"x == "1"x ]]; then
+  echo_r "ERROR: please uninstall OpenJDK and install jdk first"
+  exit 1;
+fi
+
+
+
+APP_PIDDIR="/var/run";
+if [[ ! -d "$APP_PIDDIR" ]] ; then
+    mkdir ${APP_PIDDIR};
+fi
+APP_PID="$APP_BASE/apollo.pid";
+
+# Add on extra jar files to CLASSPATH
+if [[ ! -z "$CLASSPATH" ]] ; then
+  CLASSPATH="$CLASSPATH":
+fi
+CLASSPATH="$CLASSPATH"
+
+# Bugzilla 37848: When no TTY is available, don't output to console
+have_tty=0
+# shellcheck disable=SC2006
+if [[ "`tty`" != "not a tty" ]]; then
+    have_tty=1
+fi
+
+# Bugzilla 37848: When no TTY is available, don't output to console
+have_tty=0
+# shellcheck disable=SC2006
+if [[ "`tty`" != "not a tty" ]]; then
+    have_tty=1
+fi
+
+# For Cygwin, switch paths to Windows format before running java
+if ${cygwin}; then
+  # shellcheck disable=SC2006
+  JAVA_HOME=`cygpath --absolute --windows "$JAVA_HOME"`
+  # shellcheck disable=SC2006
+  JRE_HOME=`cygpath --absolute --windows "$JRE_HOME"`
+  # shellcheck disable=SC2006
+  APP_HOME=`cygpath --absolute --windows "$APP_HOME"`
+  # shellcheck disable=SC2006
+  APP_BASE=`cygpath --absolute --windows "$APP_BASE"`
+  # shellcheck disable=SC2006
+  CLASSPATH=`cygpath --path --windows "$CLASSPATH"`
+fi
+
+# ----- Execute The Requested Command -----------------------------------------
+
+# Bugzilla 37848: only output this if we have a TTY
+if [[ ${have_tty} -eq 1 ]]; then
+  echo_w "Using APP_BASE:   $APP_BASE"
+  echo_w "Using APP_HOME:   $APP_HOME"
+  if [[ "$1" = "debug" ]] ; then
+    echo_w "Using JAVA_HOME:      $JAVA_HOME"
+  else
+    echo_w "Using JRE_HOME:       $JRE_HOME"
+  fi
+  if [[ ! -z "$APP_PID" ]]; then
+    echo_w "Using APP_PID:    $APP_PID"
+  fi
+fi
+
+if [[ $# -eq 0 ]]; then
+  #default application.yml
+  PROPER="${APP_CONF}/application.yml"
+  if [[ ! -f "$PROPER" ]] ; then
+     PROPER="${APP_CONF}/application.properties"
+      if [[ ! -f "$PROPER" ]] ; then
+        echo_r "Usage: properties file (application.properties|application.yml) not found! ";
+      else
+        echo_g "Usage: properties file:application.properties ";
+      fi
+  else
+     echo_g "Usage: properties file:application.yml ";
+  fi
+else
+  #Solve the path problem, arbitrary path, ignore prefix, only take the content after conf/
+  PROPER=$(echo "$1"|awk -F 'conf/' '{print $2}')
+  PROPER=${APP_CONF}/$PROPER
+fi
+
+ymlFile=$(echo "${PROPER}"|grep "\.yml$"|wc -l)
+if [[ $ymlFile -eq 1 ]]; then
+   #source yaml.sh
+    source ${APP_BIN}/yaml.sh
+    yaml_get ${PROPER}
+    # shellcheck disable=SC2046
+    # shellcheck disable=SC2116
+    PROFILE=$(echo ${spring_profiles_active})
+    if [[ ! "${PROFILE}" == "" ]];then
+      PROFILE="${APP_CONF}/application-${PROFILE}.yml"
+      PROPER="${PROFILE},${PROPER}"
+    fi
+else
+    PROFILE=$(grep 'spring.profiles.active' ${PROPER} | grep -v '^#' | awk -F'=' '{print $2}')
+    if [[ ! "${PROFILE}" == "" ]];then
+      PROPER="${APP_CONF}/application-${PROFILE}.properties"
+      PROPER="${PROFILE},${PROPER}"
+    fi
+fi
+
+# shellcheck disable=SC2006
+JARS=`ls -1 "$APP_LIB"`
+for JAR in ${JARS}; do
+   CLASSPATH=${CLASSPATH}:${APP_LIB}/${JAR}
+done
+
+MAIN_JAR="${APP_LIB}/$(basename ${APP_BASE}).jar"
+
+JAVA_OPTS="""
+-server
+-Xms1024m
+-Xmx1024m
+-Xmn256m
+-XX:NewSize=100m
+-XX:+UseConcMarkSweepGC
+-XX:CMSInitiatingOccupancyFraction=70
+-XX:PermSize=128m
+-XX:MaxPermSize=128m
+-XX:ThreadStackSize=512
+-Xloggc:${APP_HOME}/logs/gc.log"""
+
+eval "${RUNJAVA}" \
+    ${JAVA_OPTS} \
+    -classpath "\"${CLASSPATH}\"" \
+    -Dapp.home="${APP_HOME}" \
+    -Dspring.config.location="${PROPER}" \
+    -jar ${MAIN_JAR} >> "${APP_OUT}" 2>&1 &
+
+exit 0;
